# cursor-workspace-tool

./: .gitignore  CONTRIBUTING.md  README.md  cursor_workspace_tool.py  pyproject.toml
.github/workflows/: publish.yml
