[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-workspace-tool"
version = "0.1.1"
description = "Inspect and manage Cursor workspaces and AI Chat / Composer history across Windows and WSL/Linux."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Aviv Raz" },
]
keywords = [
    "cursor",
    "vscode",
    "workspace",
    "ai-chat",
    "composer",
    "wsl",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/aviv-raz/cursor-workspace-tool"
Repository = "https://github.com/aviv-raz/cursor-workspace-tool"
Issues = "https://github.com/aviv-raz/cursor-workspace-tool/issues"

[project.scripts]
cursor-workspace-tool = "cursor_workspace_tool:main"
cwt = "cursor_workspace_tool:main"

[tool.setuptools]
py-modules = ["cursor_workspace_tool"]
